[tool.poetry]
name = "dis"
version = "0.1.0"
description = "Project for the paper: Highly Accurate Dichotomous Image Segmentation"
authors = ["Xuebin Qin <xuebin@ualberta.ca>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gdown = "^4.6.4"
requests = "^2.28.2"
matplotlib = "^3.7.1"
opencv-python = "^4.7.0.72"
pillow = "^9.4.0"
scikit-image = "^0.20.0"
torch = "^1.13.1"
torchvision = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
